<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/b_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/mf_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mflops"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/mflops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nr_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nres"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/nres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timr_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/precision_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/precision"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/precision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"/>
    </LinearLayout>

</LinearLayout>