<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/b_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@drawable/card_background_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mf_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mflops"
                android:textColor="#000"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/mflops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nr_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nres"
                android:textColor="#000"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/nres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timr_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/precision_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precision"
                android:textColor="#000"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/precision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/start_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/start_single"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_layout"
        android:layout_margin="8dp">

    </ListView>

</RelativeLayout>